# The-MedGemma-Impact-Challenge

./: .gitignore  EDGE_DEPLOYMENT.md  README.md  UPDATES.md  main.py  requirements.txt
Inference Test App/: ROADMAP.md
android_app/: .gitignore  README.md  settings.gradle.kts
android_app/app/: build.gradle.kts
android_app/app/src/androidTest/java/com/medgemma/edge/: ExampleInstrumentedTest.kt
android_app/app/src/main/: AndroidManifest.xml
android_app/app/src/main/cpp/: CMakeLists.txt  medgemma_jni.cpp
android_app/app/src/main/java/com/medgemma/edge/: MainActivity.kt
android_app/app/src/main/java/com/medgemma/edge/inference/: BiomedClipInference.kt  MedGemmaInference.kt
android_app/app/src/main/java/com/medgemma/edge/ui/theme/: Color.kt  Theme.kt  Type.kt
android_app/app/src/main/res/values/: strings.xml  themes.xml
android_app/app/src/test/java/com/medgemma/edge/: ExampleUnitTest.kt
android_app/gradle/wrapper/: gradle-wrapper.properties
benchmarks/: README.md
docs/: DELIVERY_SUMMARY.md  DOCUMENTATION.md  PROJECT_SUMMARY.md  SETUP_GUIDE.md
edge_deployment/: README.md
edge_deployment/scripts/: simple_test.py
evaluation/: README.md  biomedclip_classification_eval.py  medgemma_clinical_eval.py
medlens/: .gitignore  README.md
models/: medgemma.py
quantization/: README.md
quantization/scripts/: quantize_gguf.py  quantize_int8.py  quantize_onnx_int8.py
